Highlight start.html

--- a/web/templates/partials/pages/start.html
+++ b/web/templates/partials/pages/start.html
@@ -60,14 +60,14 @@
       <div class="text-sm text-gray-300 font-medium">Build from source</div>
       <div class="text-xs text-gray-500">example</div>
     </div>
-    <pre class="p-5 text-base overflow-x-auto"><code class="text-gray-200"># clone the repo
+    <pre class="p-5 text-base overflow-x-auto"><code class="text-gray-200"><span class="comment"># clone the repo</span>
 git clone https://github.com/taus9/ego.git
 cd ego
 
-# build
+<span class="comment"># build</span>
 go build
 
-# run
+<span class="comment"># run</span>
 ./ego version</code></pre>
   </div>
 
@@ -89,9 +89,8 @@ go build
       <div class="text-sm text-gray-300 font-medium">hello.ego</div>
       <div class="text-xs text-gray-500">example</div>
     </div>
-    <pre class="p-5 text-base overflow-x-auto"><code class="text-gray-200"># run hello.ego
-ego ./examples/hello.ego
-    </code></pre>
+    <pre class="p-5 text-base overflow-x-auto"><code class="text-gray-200"><span class="comment"># run hello.ego</span>
+ego ./examples/hello.ego</code></pre>
   </div>
 </section>
 
