--- a/web/templates/partials/pages/basics.html
+++ b/web/templates/partials/pages/basics.html
@@ -97,7 +97,7 @@
       <div class="text-sm text-gray-300 font-medium">identifiers.ego</div>
       <div class="text-xs text-gray-500">example</div>
     </div>
-    <pre class="p-5 text-base overflow-x-auto"><code class="text-gray-200"><span class="variable">name</span>     <span class="operator">:=</span> <span class="string">"Ego"</span>
+    <pre class="p-5 text-base overflow-x-auto"><code class="text-gray-200"><span class="variable">name</span>     <span class="operator">:=</span> <span class="string">'Ego'</span>
 <span class="variable">answer42</span> <span class="operator">:=</span> <span class="number">42</span>
 <span class="variable">_is_temp</span> <span class="operator">:=</span> <span class="keyword">true</span>
 <span class="variable">$PI</span>      <span class="operator">:=</span> <span class="number">3.14</span>
